テスト追加と微修正
