# internal/controller/http/v1/corporation.go
@@ -39,12 +39,12 @@ func (r *corporationRoutes) GetCorporation(c *gin.Context) {
 	// Get Corporation
 	corp, err := r.corporationUC.GetCorporation(c, corpID)
 	if err != nil {
-		r.l.Warn(validationErr.Error().ErrorCode)
-		httperr.ErrorResponse(c, validationErr)
+		r.l.Warn(err.Error().ErrorCode)
+		httperr.ErrorResponse(c, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, makeGetCorporationResponse(corp))
+	c.JSON(http.StatusOK, makeCorporationResponse(corp))
 }
 
 // Get Corporation List
@@ -52,11 +52,13 @@ func (r *corporationRoutes) GetCorporationList(c *gin.Context) {
 	// Get Corporation List
 	corpList, err := r.corporationUC.GetCorporationList(c)
 	if err != nil {
+		r.l.Warn(err.Error().ErrorCode)
+		httperr.ErrorResponse(c, err)
 		return
 	}
 
 	// response
-	c.JSON(http.StatusOK, makeGetCorporationResponse(corpList))
+	c.JSON(http.StatusOK, makeCorporationResponse(corpList))
 }
 
 // Create Corporation
@@ -64,26 +66,30 @@ func (r *corporationRoutes) CreateCorporation(c *gin.Context) {
 	// validation
 	corporationPost, validationErr := model.ValidatePostCorporationRequest(c)
 	if validationErr != nil {
+		r.l.Warn(validationErr.Error().ErrorCode)
+		httperr.ErrorResponse(c, validationErr)
 		return
 	}
 
 	// entity作成
 	input := entity.Corporation{
-		CorporationID: *corporationPost.CorporationId,
-		Name:          *corporationPost.Name,
+		CorporationID: "",
+		Name:          corporationPost.Name,
 		Domain:        *corporationPost.Domain,
 		Number:        *corporationPost.Number,
-		CorpType:      *corporationPost.CorpType,
+		CorpType:      corporationPost.CorpType,
 	}
 
 	// Create Corporation
 	corp, err := r.corporationUC.CreateCorporation(c, input)
 	if err != nil {
+		r.l.Warn(err.Error().ErrorCode)
+		httperr.ErrorResponse(c, err)
 		return
 	}
 
 	// response
-	c.JSON(http.StatusCreated, makeGetCorporationResponse(corp))
+	c.JSON(http.StatusCreated, makeCorporationResponse(corp))
 }
 
 // Update Corporation
@@ -91,26 +97,30 @@ func (r *corporationRoutes) UpdateCorporation(c *gin.Context) {
 	// validation
 	corpID, corporationPatch, validationErr := model.ValidatePatchCorporationRequest(c)
 	if validationErr != nil {
+		r.l.Warn(validationErr.Error().ErrorCode)
+		httperr.ErrorResponse(c, validationErr)
 		return
 	}
 
 	// entity作成
 	input := entity.Corporation{
 		CorporationID: corpID,
-		Name:          *corporationPatch.Name,
+		Name:          corporationPatch.Name,
 		Domain:        *corporationPatch.Domain,
 		Number:        *corporationPatch.Number,
-		CorpType:      *corporationPatch.Domain,
+		CorpType:      corporationPatch.CorpType,
 	}
 
 	// Update Corporation
 	corp, err := r.corporationUC.UpdateCorporation(c, input)
 	if err != nil {
+		r.l.Warn(err.Error().ErrorCode)
+		httperr.ErrorResponse(c, err)
 		return
 	}
 
 	// response
-	c.JSON(http.StatusOK, makeGetCorporationResponse(corp))
+	c.JSON(http.StatusOK, makeCorporationResponse(corp))
 }
 
 // Delete Corporation
@@ -118,17 +128,21 @@ func (r *corporationRoutes) DeleteCorporation(c *gin.Context) {
 	// validation
 	corpID, validationErr := model.ValidateCorporationIdRequest(c)
 	if validationErr != nil {
+		r.l.Warn(validationErr.Error().ErrorCode)
+		httperr.ErrorResponse(c, validationErr)
 		return
 	}
 	err := r.corporationUC.DeleteCorporation(c, corpID)
 	if err != nil {
+		r.l.Warn(err.Error().ErrorCode)
+		httperr.ErrorResponse(c, err)
 		return
 	}
 
 	c.AbortWithStatus(http.StatusNoContent)
 }
 
-func makeGetCorporationResponse(corp []entity.Corporation) []model.Corporation {
+func makeCorporationResponse(corp []entity.Corporation) []model.Corporation {
 	corporations := make([]model.Corporation, len(corp))
 	for i, c := range corp {
 		corporations[i] = model.Corporation{
